# FappyClone

./: README.md
Flappy/: CMakeLists.txt  Pipes.cpp  Pipes.h  Score.cpp  Score.h  background.cpp  background.h  bird.cpp  bird.h  collisions.cpp  collisions.h  game.cpp  game.h  game_state.h  main.cpp  main_state.cpp  main_state.h
Flappy/media/: levels.txt
